--- a/Dokumentation/LaTeX Doku/content/quellen.bib
+++ b/Dokumentation/LaTeX Doku/content/quellen.bib
@@ -11,8 +11,7 @@ year = {2013}
     title   = {{Data Classes in Kotlin}},
     journal = {Baeldung},
     year    = {2017},
-    note    = {\url{http://www.baeldung.com/kotlin-data-classes}\\
-Stand: 17.01.2018}
+    note    = {\url{http://www.baeldung.com/kotlin-data-classes}\\ Stand: 17.01.2018}
 }
 
 @Book{adventurebook,
@@ -24,7 +23,27 @@ year = {2013}
 
 @ARTICLE{gson,
 	author = {Google},
-	title = {A Java serialization/deserialization library to convert Java Objects into JSON and back},
+	title = {{A Java serialization/deserialization library to convert Java Objects into JSON and back}},
 	year = {2013},
 	note = {\url{https://github.com/google/gson}\\ Stand: 18.01.2018}
+}
+
+@ARTICLE{kotlin,
+	title = {{Statically typed programming language for modern multiplatform applications}},
+	year = {2016},
+	note = {\url{https://kotlinlang.org/}\\ Stand 17.01.2018}
+}
+
+@Article{kotlinrelease,
+author = {Piotr Kazmierczak},
+title = {{Why Kotlin Is the Hero Android Needs}},
+journal = {10clouds},
+year = {2017},
+note = {\url{https://10clouds.com/blog/kotlin-android/}\\ Stand 17.01.2018},
+}
+
+@Article{umlet,
+author = {Martin Auer},
+title = {{Free UML Tool for Fast UML Diagrams}},
+note = {\url{http://www.umlet.com/}\\ Stand 22.01.2018}
 }
