--- a/Dokumentation/LaTeX Doku/content/quellen.bib
+++ b/Dokumentation/LaTeX Doku/content/quellen.bib
@@ -47,3 +47,9 @@ author = {Martin Auer},
 title = {{Free UML Tool for Fast UML Diagrams}},
 note = {\url{http://www.umlet.com/}\\ Stand 22.01.2018}
 }
+
+@Article{mvc,
+	author = {Florina Muntenescu},
+	title = {{Android Architecture Patterns Part 1: Model-View-Controller}},
+	note = {\url{https://upday.github.io/blog/model-view-controller/}\\ Stand 22.01.2018}
+}
