Samsung Tab A - Version

--- a/Dokumentation/LaTeX Doku/content/Auswertung.tex
+++ b/Dokumentation/LaTeX Doku/content/Auswertung.tex
@@ -218,7 +218,7 @@ Der Code wurde während der Entwicklung auf den in der Tabelle aufgelisteten Ger
 \hline
 \multicolumn{1}{|c|}{Gerät} & \begin{tabular}[c]{@{}l@{}}Android\\ Version\end{tabular} \\ \hline
 Motorola Moto G4            & 7.1                                                       \\ \hline
-Samsumg Tab A               &                                                           \\ \hline
+Samsumg Tab A               & 6.0                                                       \\ \hline
 Nexus 5X                    & 8.1                                                       \\ \hline
 Nexus 5X                    & 5.0                                                       \\ \hline
 Nexus 6P                    & 8.1                                                       \\ \hline
