Integrated SpeciesFragment with Playerdata

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,8 @@
 
     <!-- Character Creation Species Dialog -->
     <string name="species_info_dialog_title">Spezies Information</string>
+    <string name="species">Ausgewählte Spezies:</string>
+    <string name="species_none">Keine</string>
 
     <!-- Character Creation Appearance-->
     <string name="appearance_gender">Geschlecht:</string>
