--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="cc_attributes">Attribute</string>
     <string name="cc_motivation">Motivation</string>
     <string name="cc_appearance">Aussehen</string>
+    <string name="cc_skills">Skills</string>
     <string name="cc_gear">Ausrüstung</string>
     <string name="cc_completion">Abschluss</string>
 
@@ -161,4 +162,11 @@
     <string name="usersettings">Benutzerverwaltung</string>
     <string name="iesettings">Funktionen</string>
     <string name="resetpw">Password zurücksetzen</string>
+
+    <!-- Skill -->
+    <string name="add_skill">Skill hinzufügen</string>
+    <string name="name">Name:</string>
+    <string name="skill_description">Beschreibung:</string>
+    <string name="skill_edit_dialog_title">Skill bearbeiten</string>
+    <string name="complete_skill_edit">Änderungen übernehmen</string>
 </resources>
